--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bonappetit"
-        tools:targetApi="31"
-        android:name=".MyApplication">
+        android:enableOnBackInvokedCallback="true"
+        android:name=".MyApplication"
+        tools:targetApi="31" >
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
