--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,8 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
 
     implementation "io.insert-koin:koin-android:3.2.0"
+
+    def arrow_version = "1.1.2"
+    implementation "io.arrow-kt:arrow-core:$arrow_version"
 }
 
