--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,14 @@ dependencies {
 
     def arrow_version = "1.1.2"
     implementation "io.arrow-kt:arrow-core:$arrow_version"
+
+
+    def retrofit_version = "2.9.0"
+    // implementation "com.squareup.retrofit2:retrofit:$retrofit_version" 下のmoshiに含まれているため不要
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    // implementation "com.squareup.okhttp3:logging-interceptor:4.9.0" buildでエラー吐く　参考にしたとこでは追加してたけど使わないのでコメントアウト
+    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
+
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
 
