カレンダー用ライブラリを追加

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,5 +84,7 @@ dependencies {
     implementation "io.arrow-kt:arrow-core:$arrow_version"
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation 'com.kizitonwose.calendar:view:2.1.1'
 }
 
